fix: contrast issues

--- a/packages/website/src/styles.scss
+++ b/packages/website/src/styles.scss
@@ -8,7 +8,7 @@
   --accent: #c90040;
   --accent-light: #{color.scale(#c90040, $lightness: 90%, $saturation: -40%)};
   --accent-dark: #{color.scale(#c90040, $lightness: -20%, $saturation: +20%)};
-  --medium: #{color.mix(#0078d4, #00a1a1)};
+  --medium: #{color.scale(color.mix(#0078d4, #00a1a1), $lightness: -10%)};
   --medium-light: #{color.scale(color.mix(#0078d4, #00a1a1), $lightness: 90%, $saturation: -40%)};
   --accent-2: #006680;
   --accent-2-light: #{color.scale(#006680, $lightness: 90%, $saturation: -40%)};
